reformatted with current mrl_java_formatter.xml